--- a/809.html
+++ b/809.html
@@ -862,6 +862,8 @@ document.addEventListener("DOMContentLoaded", function () {
         { id: "user-ipv4", label: "⑤", url: "https://api.pearktrue.cn/api/ip/high", parse: (data) => data.ip || "未知", type: "json" },
         { id: "webrtc-ip", label: "⑥", parse: () => "检测中...", type: "webrtc" },
         { id: "user-ipv6", label: "⑦", url: "https://api6.ipify.org", parse: (data) => data.trim() || "未知", type: "text" },
+		{ id: "user-ipv6", label: "X", url: "http://v6.ip.zxinc.org/getip, parse: (data) => data.trim() || "未知", type: "text" },
+		
         { id: "user-ipv6-test", label: "⑧", url: "https://ipv6.ddnspod.com", parse: (data) => data, type: "text" },
         { id: "user-ipv6-new", label: "⑨", url: "https://ipv6.losangeles.test-ipv6.com/ip/?callback=jsonpIPv6Callback", type: "jsonp" }
     ];
