Update and rename 778.html to 3778.html

--- a/3778.html
+++ b/3778.html
@@ -1007,26 +1007,7 @@ input[type="range"]::-webkit-slider-thumb {
 <!-- 颜色、菜单、顶部、问题 -->
 <script>function _0x3c6e05(_0x13630b,_0x146d49,_0x49e84e,_0x10f59b){return _0x174e(_0x13630b-0x103,_0x146d49);}(function(_0x23d20c,_0x7c2eb){const _0x153594=_0x23d20c();function _0x25b85d(_0xb6817c,_0x5b081,_0x269076,_0x15d4f9){return _0x174e(_0x5b081- -0x210,_0x15d4f9);}function _0x50d6c3(_0x1a10ad,_0x4dc1c2,_0xbab369,_0x4ae08f){return _0x174e(_0xbab369-0x2f3,_0x1a10ad);}while(!![]){try{const _0x44fa70=-parseInt(_0x25b85d(-0x211,-0x210,-0x215,-0x1f6))/0x1+-parseInt(_0x25b85d(-0x218,-0x20f,-0x222,-0x215))/0x2*(parseInt(_0x50d6c3(0x2e7,0x2ee,0x2f5,0x2dd))/0x3)+parseInt(_0x50d6c3(0x310,0x2fb,0x2f6,0x305))/0x4*(parseInt(_0x50d6c3(0x303,0x2e8,0x2f7,0x30e))/0x5)+-parseInt(_0x50d6c3(0x301,0x2e3,0x2f8,0x2ea))/0x6*(-parseInt(_0x25b85d(-0x206,-0x20a,-0x20a,-0x21b))/0x7)+-parseInt(_0x50d6c3(0x2dd,0x2e4,0x2fa,0x312))/0x8+parseInt(_0x50d6c3(0x2fd,0x314,0x2fb,0x2f4))/0x9+parseInt(_0x50d6c3(0x2f8,0x2fa,0x2fc,0x2f4))/0xa*(parseInt(_0x25b85d(-0x220,-0x206,-0x1fa,-0x1ef))/0xb);if(_0x44fa70===_0x7c2eb){break;}else{_0x153594['push'](_0x153594['shift']());}}catch(_0x3cf16a){_0x153594['push'](_0x153594['shift']());}}}(_0x5891,0xe1ee5));(function(){const _0x51910e={'tvvRO':function(_0x276c69,_0x2d70f6){return _0x276c69!==_0x2d70f6;},'qGviK':function(_0x21c9e9,_0x4011d0){return _0x21c9e9+_0x4011d0;},'ororb':_0x4aab7a(0x2c3,0x2ae,0x2ab,0x2c0)};function _0x4aab7a(_0x426dee,_0x25a78c,_0xb99a28,_0x36dea6){return _0x174e(_0x25a78c-0x2a3,_0xb99a28);}const _0x26371b=_0x5cc962(-0x3a7,-0x3ab,-0x3b2,-0x3a2)['split']('|');function _0x5cc962(_0x44de3a,_0x5bbdda,_0x1069a5,_0x6c17ff){return _0x174e(_0x6c17ff- -0x3ae,_0x5bbdda);}let _0x505770=0x0;while(!![]){switch(_0x26371b[_0x505770++]){case'0':var _0x988be1='toolxp.com';continue;case'1':if(!_0x52455d){window['location'][_0x5cc962(-0x39d,-0x3ac,-0x3bb,-0x3a1)]('https://example.com');}continue;case'2':var _0x52455d=_0xae5214['test'](_0x21775b)&&_0x51910e['tvvRO'](_0x21775b,'');continue;case'3':var _0x21775b=window[_0x4aab7a(0x2a3,0x2b1,0x2cd,0x2a5)]['hostname'];continue;case'4':var _0xae5214=new RegExp(_0x51910e['qGviK'](_0x51910e[_0x5cc962(-0x39a,-0x3a4,-0x3b4,-0x39f)]+_0x988be1[_0x4aab7a(0x2c0,0x2b0,0x2ab,0x2b1)]('.','\x5c.'),'$'));continue;}break;}}());document['addEventListener'](_0x4079dd(-0xaf,-0xbf,-0xca,-0xc0),function(){const _0x5be04b={'NWypj':'active','tpiWA':_0x3d2fc6(-0x13b,-0x145,-0x13a,-0x157),'cUjwX':'.menu-item\x20>\x20a'};function _0x551ee0(_0xd13f6b,_0x4de86c,_0x216ce4,_0x5bff1e){return _0x174e(_0x4de86c-0x17e,_0xd13f6b);}function _0x50abe0(){function _0x8fb03(_0x385b7a,_0x501308,_0x297bcb,_0xad5a69){return _0x174e(_0x297bcb-0xe7,_0x501308);}function _0x46d8f4(_0x5bcce7,_0x56a95e,_0x23ab54,_0x3aa6dd){return _0x174e(_0x23ab54-0x28,_0x56a95e);}document['getElementById']('navMenu')[_0x46d8f4(0x4d,0x48,0x3a,0x2b)][_0x46d8f4(0x49,0x31,0x3b,0x3a)]('active');}function _0x33ba0b(_0x52523f){function _0x32388f(_0x2bd743,_0x1cb6a8,_0x1e8c0e,_0x19869c){return _0x174e(_0x1e8c0e-0x14,_0x2bd743);}function _0x2d2e5b(_0x200b90,_0x5844a5,_0x351602,_0x533ec8){return _0x174e(_0x200b90- -0x315,_0x5844a5);}const _0x1dabb3=_0x52523f[_0x32388f(0xf,0x3c,0x28,0xc)][_0x2d2e5b(-0x300,-0x2f6,-0x2f1,-0x313)];if(_0x1dabb3&&_0x1dabb3[_0x2d2e5b(-0x303,-0x2fe,-0x2fa,-0x31c)][_0x32388f(0x10,0x30,0x2a,0x37)](_0x2d2e5b(-0x2fe,-0x2e6,-0x306,-0x2f5))){_0x1dabb3[_0x32388f(0x2f,0x3a,0x26,0x17)][_0x32388f(0x35,0x21,0x27,0xc)](_0x5be04b['NWypj']);}}const navToggle=document['querySelector'](_0x3d2fc6(-0x165,-0x15c,-0x140,-0x150));if(navToggle){navToggle['addEventListener'](_0x5be04b[_0x3d2fc6(-0x158,-0x158,-0x146,-0x14f)],_0x50abe0);}const menuItems=document['querySelectorAll'](_0x5be04b['cUjwX']);function _0x3d2fc6(_0x121f7d,_0x47a8b6,_0x339a6b,_0x2c2065){return _0x174e(_0x2c2065- -0x168,_0x121f7d);}menuItems[_0x551ee0(0x1b0,0x198,0x19e,0x18d)](_0x1c175f=>{function _0x1af312(_0x1c4175,_0x261c52,_0x390fe9,_0x4ba999){return _0x174e(_0x261c52-0x114,_0x1c4175);}function _0x373bc0(_0xb4f34,_0x14317a,_0x248985,_0x27587d){return _0x174e(_0xb4f34- -0x299,_0x14317a);}_0x1c175f[_0x373bc0(-0x27e,-0x293,-0x295,-0x281)](_0x373bc0(-0x288,-0x279,-0x292,-0x29e),_0x33ba0b);});});document[_0x3c6e05(0x11e,0x118,0x10e,0x10f)]('DOMContentLoaded',function(){function _0x18a2dd(_0x4c5c4a,_0x3c4c89,_0x1d74b4,_0x275fc8){return _0x174e(_0x1d74b4-0x4e,_0x275fc8);}const _0x5756f1={'ROfEQ':_0x50c1e5(-0x348,-0x358,-0x338,-0x354),'toPTd':'summary','gajtn':_0x18a2dd(0x50,0x76,0x5f,0x67),'SPaxJ':'.faq\x20details'};const allDetails=document[_0x18a2dd(0x83,0x57,0x6b,0x6b)](_0x5756f1['SPaxJ']);function _0x50c1e5(_0xaa4bdd,_0x1c874b,_0x1df5ed,_0x14d667){return _0x174e(_0xaa4bdd- -0x364,_0x1c874b);}allDetails['forEach'](_0x5ca313=>{const summary=_0x5ca313['querySelector'](_0x5756f1['toPTd']);summary['addEventListener'](_0x5756f1['gajtn'],function(_0x39b156){_0x39b156['preventDefault']();const _0x1f3186=_0x5ca313[_0x213016(-0x5d,-0x5b,-0x4d,-0x53)](_0x5756f1[_0x213016(-0x5c,-0x46,-0x79,-0x65)]);allDetails[_0x11b727(0x1,-0x13,-0x2b,-0x17)](_0x33c0fc=>_0x33c0fc['removeAttribute'](_0x213016(-0x5f,-0x79,-0x44,-0x6b)));function _0x11b727(_0x2e15be,_0x1b2c44,_0x30659b,_0x1e18da){return _0x174e(_0x1b2c44- -0x2d,_0x1e18da);}function _0x213016(_0x442450,_0x218289,_0x5c3464,_0x2b2557){return _0x174e(_0x442450- -0x7b,_0x5c3464);}if(!_0x1f3186){_0x5ca313[_0x213016(-0x5b,-0x5d,-0x50,-0x67)](_0x213016(-0x5f,-0x50,-0x68,-0x5e),'');}});});});const invertSlider=document[_0x3c6e05(0x124,0x130,0x126,0x128)]('invertSlider');const hueSlider=document['getElementById'](_0x4079dd(-0x94,-0xad,-0xa5,-0xbb));const invertValue=document['getElementById']('invertValue');const hueValue=document['getElementById']('hueValue');function updateFilter(){const _0x521365=invertSlider['value'];const _0x53e63f=hueSlider[_0x5497f4(-0x1c9,-0x1ce,-0x1bf,-0x1cd)];function _0x5497f4(_0x1bd3e9,_0xd5ee0d,_0x263c1e,_0x4fc4a5){return _0x174e(_0x4fc4a5- -0x1f0,_0x1bd3e9);}function _0x3f4123(_0x375bd8,_0x2b1e49,_0x4cdeb9,_0x49fcb1){return _0x174e(_0x49fcb1- -0xcc,_0x4cdeb9);}document[_0x3f4123(-0x9a,-0xbc,-0x91,-0xa8)][_0x3f4123(-0xb6,-0xba,-0xae,-0xa7)][_0x5497f4(-0x1da,-0x1e3,-0x1bd,-0x1ca)]=_0x5497f4(-0x1d8,-0x1ce,-0x1ce,-0x1c9)+_0x521365+_0x3f4123(-0xaf,-0x8e,-0x87,-0xa4)+_0x53e63f+_0x3f4123(-0x97,-0x95,-0xb6,-0xa3);invertValue['textContent']=parseFloat(_0x521365)['toFixed'](0x2);hueValue['textContent']=_0x53e63f+'°';}invertSlider[_0x3c6e05(0x11e,0x108,0x10a,0x11d)](_0x4079dd(-0xb8,-0xa5,-0xb4,-0xb6),updateFilter);function _0x5891(){const _0x496fa5=['input','querySelector','.scrollProgress','getTotalLength','assign','transition','scrollTop','PrZTq','innerHeight','scroll','onscroll','vbl','BAQEY','.tTpB','onclick','nyEVs','396096KpWaNK','946ayatgn','4269OApwRY','8gvjhwG','1422130WZLQfq','81858sjyISK','301DIxRpP','8946688rEjWch','12643560tkxBZg','5525830slhtGn','11whTiSn','(^|\x5c.)','0|3|4|2|1','replace','location','ororb','DOMContentLoaded','click','classList','toggle','target','nextElementSibling','contains','submenu','.nav-toggle','tpiWA','forEach','addEventListener','open','querySelectorAll','hasAttribute','ROfEQ','setAttribute','getElementById','hueSlider','value','documentElement','style','filter','invert(',')\x20hue-rotate(','deg)'];_0x5891=function(){return _0x496fa5;};return _0x5891();}hueSlider['addEventListener'](_0x4079dd(-0xb3,-0xa5,-0xb2,-0x90),updateFilter);updateFilter();var progressPath=document[_0x3c6e05(0x12e,0x11c,0x122,0x116)](_0x3c6e05(0x12f,0x14b,0x12f,0x117)),pathLength=progressPath[_0x3c6e05(0x130,0x140,0x148,0x113)]();Object[_0x3c6e05(0x131,0x146,0x134,0x125)](progressPath['style'],{'transition':'none','strokeDasharray':pathLength+'\x20'+pathLength,'strokeDashoffset':pathLength});progressPath['getBoundingClientRect']();function _0x174e(_0x390fca,_0x5891f1){const _0x174e7e=_0x5891();_0x174e=function(_0xe86771,_0x50a067){_0xe86771=_0xe86771-0x0;let _0x1490f2=_0x174e7e[_0xe86771];return _0x1490f2;};return _0x174e(_0x390fca,_0x5891f1);}progressPath[_0x3c6e05(0x128,0x10c,0x10f,0x117)][_0x4079dd(-0x9d,-0xa0,-0xa4,-0xbb)]='stroke-dashoffset\x2010ms\x20linear';var updateProgress=()=>{function _0x5c5fe5(_0x50497e,_0x197312,_0x53a6d0,_0x17e8a0){return _0x174e(_0x17e8a0-0x155,_0x53a6d0);}const _0x12df2a={'PrZTq':function(_0x176228,_0x2090d2){return _0x176228-_0x2090d2;},'zHSLk':function(_0x18551e,_0x26a06b){return _0x18551e*_0x26a06b;}};function _0xe77e89(_0x1acf09,_0x3e321b,_0x13ba70,_0x2a16d0){return _0x174e(_0x3e321b-0xc6,_0x13ba70);}var _0x582aea=document['documentElement'][_0xe77e89(0xee,0xf6,0xef,0xea)],_0x4f5e73=_0x12df2a[_0x5c5fe5(0x16b,0x177,0x19d,0x186)](document['documentElement']['scrollHeight'],window[_0xe77e89(0xdc,0xf8,0x10d,0xe2)]);progressPath[_0xe77e89(0xfc,0xeb,0xe3,0xf1)]['strokeDashoffset']=_0x12df2a['PrZTq'](pathLength,_0x12df2a['zHSLk'](_0x582aea,pathLength)/_0x4f5e73);};updateProgress();window[_0x3c6e05(0x11e,0x13a,0x110,0x101)](_0x3c6e05(0x136,0x144,0x136,0x149),updateProgress);window[_0x4079dd(-0xb3,-0x9b,-0x7e,-0x89)]=()=>{function _0x47f3af(_0x134786,_0x35bed8,_0x596a3c,_0x22c644){return _0x174e(_0x596a3c- -0x7f,_0x22c644);}const _0x727f7c={'abcwl':_0x26d972(0x161,0x147,0x15a,0x162),'BAQEY':function(_0x3d05db,_0x1351c9){return _0x3d05db>_0x1351c9;}};function _0x26d972(_0x46b9da,_0x3da73f,_0x3f7c05,_0x1e20c3){return _0x174e(_0x3da73f-0x112,_0x1e20c3);}document[_0x26d972(0x14a,0x13d,0x157,0x157)]('.tTpB')['classList']['toggle'](_0x727f7c['abcwl'],_0x727f7c[_0x26d972(0x15c,0x148,0x12d,0x147)](document[_0x26d972(0x13a,0x136,0x144,0x153)][_0x26d972(0x13c,0x142,0x14e,0x128)],0x0));};function _0x4079dd(_0x2358df,_0x3501cf,_0x2bb9b7,_0x1fafe0){return _0x174e(_0x3501cf- -0xcf,_0x2bb9b7);}document['querySelector'](_0x3c6e05(0x13a,0x145,0x12d,0x143))[_0x3c6e05(0x13b,0x142,0x156,0x127)]=()=>{function _0x5cbd25(_0x162196,_0x58f4fa,_0x22ac98,_0x54a087){return _0x174e(_0x54a087-0x11c,_0x22ac98);}function _0x6b9739(_0x14399a,_0x3d63bd,_0x961fb7,_0x4d53b0){return _0x174e(_0x3d63bd- -0xfc,_0x961fb7);}const _0x7ff94f={'nyEVs':'smooth'};window[_0x6b9739(-0xb6,-0xc9,-0xda,-0xad)]({'top':0x0,'behavior':_0x7ff94f[_0x6b9739(-0xbf,-0xc3,-0xb9,-0xc3)]});};</script>
 
-
 <script>
-(function(){
-  const payload = () => {
-
-
-// 域名锁定
-(function() {
-    var allowedDomain = "toolxp.com";
-    var currentDomain = window.location.hostname;
-
-    var domainRegex = new RegExp("(^|\\.)" + allowedDomain.replace('.', '\\.') + "$");
-    var isAllowed = domainRegex.test(currentDomain) && currentDomain !== "";
-
-    if (!isAllowed) {
-        window.location.replace("https://example.com");
-    }
-})();
-
-
 // 点击按钮时显示加载动画，2秒后开始执行操作
 const detectButton = document.getElementById("detectButton");
 const originalText = detectButton.textContent;
@@ -1354,8 +1335,9 @@ detectButton.addEventListener("click", function () {
 
   // 🌐 IP检测接口列表（IPv4 和 IPv6）
   const v4Apis = [
-    "https://ipinfo.io/json",
-    "https://api.ipify.org?format=json",
+    "https://app.netart.cn/network-panel/ip.ajax",
+    "https://api.vore.top/api/IPdata",
+    "https://jkapi.com/api/zz_ip",
     "https://myip.ipip.net/json",
   ];
   const v6Apis = [
@@ -1457,17 +1439,9 @@ detectButton.addEventListener("click", function () {
         .map((i) => `${i.ip} (${i.country_code}, ASN: ${i.asn})`)
         .join("\n") || "未检测到多出口 IP";
   }
+</script>
 
-  // 在检测按钮点击后执行
-  document.getElementById("detectButton").addEventListener("click", () => {
-    setTimeout(detectMultiExitIPs, 3000); // 与其他检测保持同步
-  });
 
-    // 自毁
-    document.currentScript?.remove();
-  };
 
-  payload();
-})();</script>
-
+<!-- 开发者工具 -->
 </body></html>
