Update and rename 359.html to 774.html

--- a/774.html
+++ b/774.html
@@ -868,6 +868,7 @@ results.forEach(({ source, status, isTip }) => {
     tip.style.fontWeight = "bold";
     tip.style.margin = "16px 0 8px 0";
     tip.style.textAlign = "center"; // 添加居中样式
+	tip.style.color = "#708eff";  
     document.getElementById("result-content").appendChild(tip);
     return;
   }
