--- a/ip-address-generator.html
+++ b/ip-address-generator.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><script src="https://toolxp.907000.xyz/ip-address-generator.html.js"></script>
+<!DOCTYPE html><script src="https://toolxp.907000.xyz/ip-address-generator-html.js"></script>
